ACLOCAL_AMFLAGS = -I m4
DISTCLEANFILES = $(top_srcdir)/aclocal.m4 \
	$(top_srcdir)/ar-lib \
	$(top_srcdir)/config.guess \
	$(top_srcdir)/config.sub \
	$(top_srcdir)/configure \
	$(top_srcdir)/depcomp \
	$(top_srcdir)/install-sh \
	$(top_srcdir)/ltmain.sh \
	$(top_srcdir)/Makefile.in \
	$(top_srcdir)/missing

SUBDIRS = src tests
